# codecadet-compiler

./: .gitignore  CMakeLists.txt  README.MD  auto-merge.sh  main.cpp  makefile
.circleci/: auto-merge.sh  config.yml
benchmark_tests/: benchmark-format.js  lexer_bm.cpp
examples/: main.cdet
shared/: token.h  tokenTypes.h
src/lexer/: keywords.h  lexer  lexer.cpp  lexer.h  makefile
src/shared/: fileReader.h  token.h  tokenTypes.h
unit_tests/: lexerTest.cpp
